# clash-verge-rev

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  VXKEX_FIX_SUMMARY.md  WIN7_README.txt  WIN7_VXKEX_README.md  package.json
.github/workflows/: alpha.yml  release.yml  win7-legacy.yml
scripts/: check.mjs  portable-fixed-webview2.mjs  portable.mjs  updatelog.mjs  updater-fixed-webview2.mjs  updater.mjs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json  webview2.arm64.json  webview2.win7.x64.json  webview2.x64.json  webview2.x86.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: lib.rs
src-tauri/src/config/: clash.rs  verge.rs
src-tauri/src/core/: service.rs
src-tauri/src/core/tray/: mod.rs
src-tauri/src/feat/: proxy.rs
src-tauri/vxkex/: configure-vxkex.ps1
src/components/home/: system-info-card.tsx
src/components/layout/: update-button.tsx
src/components/setting/: setting-clash.tsx  setting-verge-advanced.tsx
src/components/setting/mods/: clash-port-viewer.tsx  update-viewer.tsx
src/pages/: settings.tsx
